# python-web-services-2022

./: .gitignore  Pipfile  README.md  anime_server.py  client.py  config.py  guru_logic.py  pyproject.toml  server.py  setup.cfg  test_integration.py  test_unit.py
app/: contracts.py  main.py  routers.py
definitions/: service.proto
definitions/builds/: service_pb2.py  service_pb2_grpc.py
